# automaster-assistant_pred_prod

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  nginx.conf  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 06b9ab3974a1_initial_schema.py
bot_assistant/: async_utils.py  circuit_breaker.py  config.py  database.py  db_models.py  di.py  errors.py  logger.py  middleware.py  redis_client.py  repository.py  retry.py  security.py  validators.py
bot_assistant/handlers/: __init__.py  admin_panel.py  api_v1.py  docs.py  telegram_bot.py  web_chat.py
bot_assistant/models/: __init__.py
bot_assistant/services/: __init__.py  google_sheets.py  openai_service.py  telegram_notifier.py
bot_assistant/templates/: admin.html
tests/: test_api.py  test_async_utils.py  test_circuit_breaker.py  test_config.py  test_middleware.py  test_models.py  test_repository.py  test_retry.py  test_services.py  test_validators.py
